Adding code showing how to sum and sort a DataFrame with Pandas.

--- a/pandas/totalizando.ipynb
+++ b/pandas/totalizando.ipynb
@@ -8,6 +8,11 @@
     "# Sumarizando colunas em Python\n",
     "Como obter contagem e totais com Pandas.\n",
     "\n",
+    "Referências: \n",
+    "* [How to calculate summary statistics?](https://pandas.pydata.org/pandas-docs/stable/getting_started/intro_tutorials/06_calculate_statistics.html)\n",
+    "* [10 minutes to Pandas](https://pandas.pydata.org/pandas-docs/stable/user_guide/10min.html#viewing-data)\n",
+    "* [pandas.DataFrame.sort_values()](https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.DataFrame.sort_values.html#pandas.DataFrame.sort_values)\n",
+    "\n",
     "#### Importante\n",
     "Para o correto processamento do arquivo CSV devem ser feitas algumas modificações direto no arquivo antes de abrir pelo Python.\n",
     "\n",
@@ -40,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "id": "b0a7bce2",
    "metadata": {},
    "outputs": [
@@ -612,7 +617,7 @@
        "47      Neon         Lazer         sábado  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -626,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "id": "aea80320",
    "metadata": {},
    "outputs": [
@@ -635,6 +640,8 @@
      "output_type": "stream",
      "text": [
       "Informação estrutural:\n",
+      "\n",
+      "\n",
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 48 entries, 0 to 47\n",
       "Data columns (total 6 columns):\n",
@@ -653,7 +660,7 @@
    ],
    "source": [
     "## Vendo a estrutura dos objetos\n",
-    "print('Informação estrutural:')\n",
+    "print('Informação estrutural:\\n\\n')\n",
     "csv.info()"
    ]
   },
@@ -714,11 +721,341 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "378e5c0b",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Categoria\n",
+       "Aprendizado     1\n",
+       "Casa            7\n",
+       "Contribuição    4\n",
+       "Crédito         3\n",
+       "Habilitação     1\n",
+       "Instrumentos    2\n",
+       "Lanche          9\n",
+       "Lazer           5\n",
+       "Pets            2\n",
+       "Presentes       2\n",
+       "Reparos         4\n",
+       "Taxas           1\n",
+       "Telefonia       1\n",
+       "Vestuário       1\n",
+       "Viagem          5\n",
+       "Name: Valor, dtype: int64"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Contagem por categoria\n",
+    "lst = csv.groupby('Categoria')['Valor'].count()\n",
+    "lst.head(50)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "e53453c3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Categoria\n",
+       "Aprendizado      326.87\n",
+       "Casa            2030.98\n",
+       "Contribuição     549.90\n",
+       "Crédito         1308.01\n",
+       "Habilitação     1520.00\n",
+       "Instrumentos      74.00\n",
+       "Lanche           416.10\n",
+       "Lazer            346.57\n",
+       "Pets             119.00\n",
+       "Presentes         74.49\n",
+       "Reparos          515.00\n",
+       "Taxas             13.25\n",
+       "Telefonia         51.99\n",
+       "Vestuário         29.99\n",
+       "Viagem           347.57\n",
+       "Name: Valor, dtype: float64"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lst = csv.groupby('Categoria')['Valor'].sum()\n",
+    "lst.head(50)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "0e908058",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Valor</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Categoria</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Taxas</th>\n",
+       "      <td>13.25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Vestuário</th>\n",
+       "      <td>29.99</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Telefonia</th>\n",
+       "      <td>51.99</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Instrumentos</th>\n",
+       "      <td>74.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Presentes</th>\n",
+       "      <td>74.49</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Pets</th>\n",
+       "      <td>119.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Aprendizado</th>\n",
+       "      <td>326.87</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Lazer</th>\n",
+       "      <td>346.57</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Viagem</th>\n",
+       "      <td>347.57</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Lanche</th>\n",
+       "      <td>416.10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Reparos</th>\n",
+       "      <td>515.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Contribuição</th>\n",
+       "      <td>549.90</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Crédito</th>\n",
+       "      <td>1308.01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Habilitação</th>\n",
+       "      <td>1520.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Casa</th>\n",
+       "      <td>2030.98</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                Valor\n",
+       "Categoria            \n",
+       "Taxas           13.25\n",
+       "Vestuário       29.99\n",
+       "Telefonia       51.99\n",
+       "Instrumentos    74.00\n",
+       "Presentes       74.49\n",
+       "Pets           119.00\n",
+       "Aprendizado    326.87\n",
+       "Lazer          346.57\n",
+       "Viagem         347.57\n",
+       "Lanche         416.10\n",
+       "Reparos        515.00\n",
+       "Contribuição   549.90\n",
+       "Crédito       1308.01\n",
+       "Habilitação   1520.00\n",
+       "Casa          2030.98"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Ordenando os resultados\n",
+    "# Primeiro transforma em um DataFrame para poder usar funções do Pandas\n",
+    "lst2 = pd.DataFrame(lst)\n",
+    "# Ascendente\n",
+    "lst2.sort_values(by='Valor')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "c080cfd2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Valor</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Categoria</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Casa</th>\n",
+       "      <td>2030.98</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Habilitação</th>\n",
+       "      <td>1520.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Crédito</th>\n",
+       "      <td>1308.01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Contribuição</th>\n",
+       "      <td>549.90</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Reparos</th>\n",
+       "      <td>515.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Lanche</th>\n",
+       "      <td>416.10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Viagem</th>\n",
+       "      <td>347.57</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Lazer</th>\n",
+       "      <td>346.57</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Aprendizado</th>\n",
+       "      <td>326.87</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Pets</th>\n",
+       "      <td>119.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Presentes</th>\n",
+       "      <td>74.49</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Instrumentos</th>\n",
+       "      <td>74.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Telefonia</th>\n",
+       "      <td>51.99</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Vestuário</th>\n",
+       "      <td>29.99</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Taxas</th>\n",
+       "      <td>13.25</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                Valor\n",
+       "Categoria            \n",
+       "Casa          2030.98\n",
+       "Habilitação   1520.00\n",
+       "Crédito       1308.01\n",
+       "Contribuição   549.90\n",
+       "Reparos        515.00\n",
+       "Lanche         416.10\n",
+       "Viagem         347.57\n",
+       "Lazer          346.57\n",
+       "Aprendizado    326.87\n",
+       "Pets           119.00\n",
+       "Presentes       74.49\n",
+       "Instrumentos    74.00\n",
+       "Telefonia       51.99\n",
+       "Vestuário       29.99\n",
+       "Taxas           13.25"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Sort reverso (descendente)\n",
+    "lst2.sort_values(by='Valor', ascending=False)"
+   ]
   }
  ],
  "metadata": {
